--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
 ---
 
-default:
-  image: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-latest
-
 stages:
   - build
   - lint
@@ -11,6 +8,11 @@ stages:
 variables:
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
+  OS_VER: '20.04'
+  SALT_VER: '3003.3'
+
+default:
+  image: $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-$CI_COMMIT_REF_NAME-latest
 
 docker_build:
   stage: build
@@ -20,7 +22,7 @@ docker_build:
 
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker pull $CI_REGISTRY_IMAGE:main-latest || true
+    - docker pull $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-main-latest || true
 
   rules:
     - if: $CI_COMMIT_BRANCH
@@ -31,12 +33,12 @@ docker_build:
       when: on_success
 
   script:
-    - "docker build --cache-from $CI_REGISTRY_IMAGE:latest \
-      --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA \
-      --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-latest \
+    - "docker build --cache-from $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-latest \
+      --tag $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-$CI_COMMIT_SHORT_SHA \
+      --tag $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-$CI_COMMIT_REF_NAME-latest \
       -f etc/Dockerfile ."
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME-latest
+    - docker push $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-$CI_COMMIT_SHORT_SHA
+    - docker push $CI_REGISTRY_IMAGE:$OS_VER-$SALT_VER-$CI_COMMIT_REF_NAME-latest  # yamllint disable-line rule:line-length
 
 lint:
   stage: lint
